--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ deploy:
   provider: script
   script: bash docker_push
   on:
-    branch: master
+    branch: devel
 notifications: 
   slack: raz-s:se1PurXsQJv03nBZa9XWMOOS
